[MB-26939] Prevent recursive mutation that could be caused by N1QL

* We will now prevent the Function from getting deployed if any of
  the N1QL queries tries to execute a DML query on the source
  bucket, as this would cause recursive mutation.

Change-Id: I60199ff4d2984bb829a7e5865bb3285bc454db9f
Reviewed-on: http://review.couchbase.org/91958
Tested-by: Gautham B A <gautham.bangalore@gmail.com>
Reviewed-by: Abhishek Singh <abhishek@couchbase.com>